--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -1,6 +1,6 @@
 {
     "plugins/openzwave/core/class/openzwave.class.php": {
-        "Echec de la requête http : ": "Fehler bei der http abfrage:",
+        "Echec de la requête http : ": "Fehler bei der HTTP abfrage:",
         "Local": "Lokal",
         "Le port n'est pas configuré": "Der Port ist nicht konfiguriert",
         "Création des commandes à partir d'une configuration": "Befehle von einer Konfiguration erstellen",
@@ -25,7 +25,7 @@
         "Mes équipements Z-Wave": "Meine Z-Wave Geräte",
         "Général": "Allgemein",
         "Nom de l'équipement": "Gerätename",
-        "Objet parent": "Eltern-Objekt",
+        "Objet parent": "Haupt-Objekt",
         "Aucun": "Ohne",
         "Catégorie": "Kategorie",
         "Activer": "aktivieren",
@@ -35,7 +35,7 @@
         "Délai maximum autorisé entre 2 messages (min)": "Maximale Zeit zwischen 2 Nachrichten (min)",
         "Informations": "Information",
         "Detecter automatiquement le modele du module": "Das Geräte Modell automatisch erkennen",
-        "Voir l'arbre Z-Wave": "Siehe Z-Wave-Baum",
+        "Voir l'arbre Z-Wave": "Zeige Z-Wave-Struktur",
         "Type": "Typ",
         "Modèle": "Model",
         "Version de la configuration": "Version der Konfiguration",
@@ -45,20 +45,20 @@
         "Assistant": "Assistent",
         "Documentation du module": "Modul Dokumentation",
         "Documentation": "Dokumentation",
-        "Appliquer le jeu de configuration recommandée par l'équipe Jeedom": "Den Konfigurations Datensatz anwenden, der vom Jeedom Team empfohlen wurde",
+        "Appliquer le jeu de configuration recommandée par l'équipe Jeedom": "Die empfohlenen Konfiguration anwenden (Jeedom)",
         "Configuration recommandée": "Empfohlene Konfiguration",
         "Commentaire": "Kommentar",
         "Supprimer": "Löschen",
         "Sauvegarder": "Speichern",
         "Commandes": "Befehle",
         "Nom": "Name",
-        "Instance ID": "Instance ID",
+        "Instance ID": "Instanzen ID",
         "Classe": "Klasse",
         "Commande": "Befehl",
         "Options": "Optionen",
         "Le réseau Z-Wave est en cours de démarrage sur le serveur ": "Das Z-Wave Netzwerk wird auf dem Server gestartet",
         "Vous êtes en mode exclusion sur Local. Cliquez à nouveau sur le bouton d'exclusion pour sortir de ce mode": "Sie sind im Exclusions Modus. Klicken Sie erneut auf die Schaltfläche um den Exclusions Modus zu verlassen.",
-        "Appliquer le mapping de commandes": "Das Mapping von Aufträgen anwenden",
+        "Appliquer le mapping de commandes": "Das Mapping von Kommandos anwenden",
         "Configuration avancée": "Erweiterte Konfiguration",
         "Equipement": "Gerät",
         "Mapping de commandes": "Befehls Mapping",
@@ -150,8 +150,8 @@
         "Confirmation": "Rückmeldung",
         "Remettre à zéro le contrôleur et effacer ses paramètres de configuration réseau.": "Zurücksetzen des Controller und löschen ihrer Parameter der Netzwerkkonfiguration. ",
         "Le contrôleur devient un contrôleur primaire, prêt pour ajouter des modules sur un nouveau réseau.": "Der Controller wird zu einem primären Controller, bereit, Module in ein neues Netzwerk hinzuzufügen. ",
-        "Veuillez confirmer la remise à zéro en tapant YES": "Bitte bestätigen Sie das Rücksetzen durch Eingabe von YES",
-        "Confirmer la remise à zéro": "Rücksetzen bestätigen",
+        "Veuillez confirmer la remise à zéro en tapant YES": "Bitte bestätigen Sie das Zurücksetzen durch Eingabe von YES",
+        "Confirmer la remise à zéro": "Zurücksetzen bestätigen",
         "Annuler": "Abbrechen",
         "Résumé": "Zusammenfassung",
         "Notifications": "Benachrichtigungen",
@@ -224,8 +224,9 @@
         "(Attention : Relance du réseau)": "(Achtung : Netzwerk Neustart)  ",
         "Redémarrage": "Neustarten",
         "Redémarre le contrôleur sans effacer les paramètres de sa configuration réseau.": "Startet den Controller neu, ohne die Parameter der Netzwerkkonfiguration zu löschen.",
-        "Remise à zéro": "Rücksetzen",
-        "Remise à zéro du contrôleur.": "Rücksetzen der Steuerung.",
+        "Remise à zéro": "Zurücksetzen",
+		"GitReset": "Githib Core Manuel Synchronisieren"
+        "Remise à zéro du contrôleur.": "Zurücksetzen der Steuerung.",
         "Remet à zéro un contrôleur et efface ses paramètres de configuration réseau.": "Einen Controller zurücksetzen und seine Netzwerk Konfigurations Einstellungen löschen.",
         "Le contrôleur devient un contrôleur primaire, prêt pour ajouter de nouveaux modules à un nouveau réseau.": "Die Steuerung wird zu einem primären Controller, bereit um neue Module zu einem neuen Netzwerk hinzuzufügen.",
         "Nombre d'émissions lues :": "Zahl von gelesenen Sendungen:",
